--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,4 +96,6 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="action_settings">Settings</string>
+    <string name="fake_url">http://i.imgur.com/DvpvklR.png</string>
+    <string name="show_more">Show more</string>
 </resources>
