--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="action_settings">Settings</string>
     <string name="fake_url">http://i.imgur.com/DvpvklR.png</string>
     <string name="show_more">Show more</string>
-    <string name="label_description">Description</string>
+    <string name="label_summary">Summary</string>
+    <string name="label_rules">Rules</string>
     <string name="label_review">Review</string>
+    <string name="download_rules">Download</string>
 </resources>
