--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="content_description_favorite_button_icon">favorite button icon</string>
     <string name="content_description_video_thumbnail">video thumbnail</string>
     <string name="content_description_add_to_favorite_button">add to favorite button</string>
+    <string name="write_external_storage_error">Write external storage permissions were not granted.</string>
 </resources>
